--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,7 @@
                         <useReleaseProfile>false</useReleaseProfile>
                         <releaseProfiles>release</releaseProfiles>
                         <goals>deploy</goals>
+                        <pushChanges>false</pushChanges>
                     </configuration>
                 </plugin>
             </plugins>
