--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com/phxql/easy-krypto.git</connection>
+        <connection>scm:git:ssh://git@github.com:phxql/easy-krypto.git</connection>
         <developerConnection>scm:git:ssh://git@github.com:phxql/easy-krypto.git</developerConnection>
         <url>http://github.com/phxql/easy-krypto/tree/master</url>
     </scm>
