--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.mkammerer.easy-krypto</groupId>
     <artifactId>easy-krypto</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>Easy Krypto</name>
     <description>This Kotlin library aims to provide a simple way to encrypt and decrypt stuff in a secure manner.
@@ -39,7 +37,8 @@
         <connection>scm:git:https://github.com/phxql/easy-krypto.git</connection>
         <developerConnection>scm:git:git@github.com:phxql/easy-krypto.git</developerConnection>
         <url>https://github.com/phxql/easy-krypto</url>
-    </scm>
+      <tag>easy-krypto-1.0</tag>
+  </scm>
 
     <properties>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
