--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.mkammerer.easy-krypto</groupId>
     <artifactId>easy-krypto</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <name>Easy Krypto</name>
     <description>This Kotlin library aims to provide a simple way to encrypt and decrypt stuff in a secure manner.
@@ -37,7 +37,7 @@
         <connection>scm:git:https://github.com/phxql/easy-krypto.git</connection>
         <developerConnection>scm:git:git@github.com:phxql/easy-krypto.git</developerConnection>
         <url>https://github.com/phxql/easy-krypto</url>
-      <tag>easy-krypto-1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
